--- a/docs/cn02.md
+++ b/docs/cn02.md
@@ -1,118 +1,6 @@
-# Spring Cloud Demo on Docker
+# Docker Swarm运行Spring Cloud（二）：Eureka高可用
 
 
-
-# Spring Cloud application
-
-Demo application is a tiny Spring Cloud application which has three services. ```Web``` and ```BookService```will register itself to ```Eureka``` Service during boot. ```Web``` service depends on ```BookService```, when it is invoked, it will find available instances of ```BookService``` from ```Eureka``` Server. ```Web``` will call ```BookService``` REST API to fulfill its result. 
-
-
-
-![](images/springcloud-tiny.png)
-
-
-
-## Build
-
-
-
-Run this command to build all images, it will rebuild all images even if no code change.
-
-```
-./build-all.sh
-```
-
-
-
-## Run application in local environment
-
-
-
-Run demo application in local environment is wasy, there is an all-in-one compose file which allows you to run all the services. 
-
-```
-cd compose
-docker-compose -f all-in-one.yml up -d
-```
-
-
-
-Find which port mapping for each services.
-
-```
-$ docker-compose -f all-in-one.yaml ps
-        Name                       Command               State            Ports
-----------------------------------------------------------------------------------------
-compose_bookservice_1   java -Djava.security.egd=f ...   Up
-compose_eureka_1        java -Djava.security.egd=f ...   Up      0.0.0.0:8761->8761/tcp
-compose_web_1           java -Djava.security.egd=f ...   Up      0.0.0.0:32771->8080/tcp
-```
-
-
-
-You will see eureka maps to port 8761 of localhost while web maps to 32771 in this case.
-
-
-
-## Access Eureka Server
-
-
-
-Access Eureka server through port 8761. You will see this Eureka server has one replica and two services registered. 
-
-```
-http://localhost:8761
-```
-
-![](images/eureka-screenshot.png)
-
-## Access the demo application
-
-Docker allocated an random port for ```web``` service, you can get the port number using ```docker-compose ps``` command, or you can assign a port number in ```all-in-one.yml```.
-
-Run this command or access it using a web browser.
-
-```
-curl http://localhost:<port>
-```
-
-![](images/web-screenshot.png)
-
-## Deploy to docker swarm using compose V3 template
-
-Let's take a look at [compose/all-in-one.yml](compose/all-in-one.yml). There are no version 3 specific compose syntax, you can deploy the application by using docker-compose in local environment, or deploy it to a Docker swarm cluster directly. 
-
-```yaml
-version: '3'
-services:
-  eureka:
-    image: binblee/demo-eurekaserver
-    ports:
-      - "8761:8761"
-    ...
-
-  web:
-    image: binblee/demo-web
-    environment:
-      - EUREKA_SERVER_ADDRESS=eureka
-    ports:
-      - "8080"
-    ...
-
-  bookservice:
-    image: binblee/demo-bookservice
-    environment:
-      - EUREKA_SERVER_ADDRESS=eureka
-    ...
-```
-
-
-
-You can deploy it to a docker swarm cluster like this:
-
-```
-docker stack deploy -f all-in-one.yml springcloud-demo
-```
 
 
 
