--- a/docs/cn02.md
+++ b/docs/cn02.md
@@ -1,19 +1,19 @@
 # Docker Swarm运行Spring Cloud（二）：Eureka高可用
 
+> 在上篇文章中介绍了如何如何在Docker Swarm集群中部署Spring Cloud应用。本文章为大家介绍如何实现Eureka的高可用。
 
 
 
+## 基础服务独立部署
 
-## Run in production environment
+把所有服务一次性部署好非常方便，但是在生产环境中使用的时候需要考虑这样一些因素：
 
-All in one is good, but you need to consider below factors when you want to run all the services in an production environment.
-
-- deploy Eureka server and applications separately, as Eureka server as an infrasturcture level service will not be updated frequently, it is not proper to deploy it with applications every time the application changes.
-- again, Eureka server as infrastructure level need some kind of HA (high availablity).
-
+- 在生产环境中的基础服务，如Eureka由于更新不频繁，应该和频繁更新应用服务分开部署
+- 作为基础服务的Eureka需要考虑高可用
 
 
-Let's break the deployment into two compose files. Using [eureka.yml](compose/eureka.yml) you can deply a three-node-cluster of Euerka. All instances have same network alias ```eureka``` for which Eureka client will looking for.  
+
+我们可以把部署描述文件分成两部分，[eureka.yml](compose/eureka.yml) 用来部署作为基础服务的Eureka Server，是包含三各节点的集群。
 
 [eureka.yml](compose/eureka.yml)
 
@@ -61,7 +61,40 @@ networks:
 
 
 
-[demoweb.yml](compose/demoweb.yml) gets the content from original [all-in-one.yml](compose/all-in-one.yml), adding network properties. All services will connect to ```springcloud-overlay``` network.
+Eureka部署到的网络```springcloud-overlay```需要手动创建，命令如下：
+
+```sh
+docker network create -d overlay springcloud-overlay
+```
+
+
+
+从部署模版中可以看出这三个Eureka实例在网络上的别名(alias)都是```eureka```，对于客户端可以在配置文件中指定这个别名即可，不必指定三个示例的名字。
+
+[application.yml](web/src/main/resources/application.properties)
+
+```yaml
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_SERVER_ADDRESS}:8761/eureka/
+```
+
+
+
+Eureka Server的地址通过```${EUREKA_SERVER_ADDRESS}``` 环境变量传入。
+
+
+
+```yaml
+services:
+  web:
+    image: binblee/demo-web
+    ...
+    environment:
+      - EUREKA_SERVER_ADDRESS=eureka
+```
+
+
+
+另外要注意的是所有依赖于Eureka的应用服务都要挂到```springcloud-overlay```网络上，否则无法和Eureka Server通信。下面是比较完整的部署描述文件的示例：
 
 ```yaml
 version: '3'
@@ -92,9 +125,11 @@ networks:
 
 
 
-Let's deploy it, noted that ```springcloud-overlay``` network needs to be created before ```eureka``` and ```demoweb``` are deployed.
+部署这几个服务需要3个步骤，首先创建overlay网络，然后部署Eureka，最后再部署应用服务。命令如下：
 
-```bash
+
+
+```sh
 docker network create -d overlay springcloud-overlay
 cd compose/
 docker stack deploy -c eureka.yml
@@ -103,9 +138,10 @@ docker stack deploy -c demoweb.yml
 
 
 
-Access port 8761 of any node in swarm, you will see Eureka instance #1 has two replicas, and services are registered to it. Visit port 8761 and 8763, you will get other two Eureka server, have a try.
+访问Swarm集群中的任意节点的8761端口，可以看到Eureka实例1有两个副本，eureka2和eureka3，2个应用服务已经注册上去了。访问8762和8763，可以看到另外两个Eureka的管理界面，内容类似。
 
 ![](images/eureka-cluster.png)
 
-## Recap
+## 小结
 
+本文章为大家介绍如何在Docker swarm-mode集群部署一个Eureka集群，并配置应用服务访问Eureka。通过这样的方式可以很方便地做到基础服务和应用分开部署，并且可以保证了基础服务的高可用。
